Fixes for calculator now the keys works as intended. some logic is faulty, but it can be managed TODO: buttons

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 					</td>
 				</tr>
 				<tr>
-					<td align="right" colspan="5" bgcolor="white" class="result" style="height: 10%"></td>
+					<td align="right" colspan="5" bgcolor="white" style="height: 10%">
+						<div class="result"></div>
+					</td>
 				</tr>
 				<tr class="key">
 					<td class="op" id="root" width="200"><center>sQ root</center></td>
