add ans function and todo list

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<body bgcolor="white">
 		<center>
 			<h1>LA  no tan ARITMETICA CALCULADORA MAGICA</h1>
+			<h5><center>que arreglo el 3d0</center></h5>
 		<table bgcolor="gray" id="calc" width="800" style="height: 50%" border="5">
 			<caption><center>CALCULADORA MAGICA</center></caption>
 			<tbody>
