add space for memory calc

--- a/index.html
+++ b/index.html
@@ -8,11 +8,18 @@
 		<table bgcolor="gray" id="calc" width="800" style="height: 50%" border="5">
 			<caption><center>CALCULADORA MAGICA</center></caption>
 			<tbody>
-				<tr class="key">
-					<td colspan="5" rowspan="1" bgcolor="white" class="input" style="height: 25%">
+				<tr>
+					<td colspan="4" rowspan="1" bgcolor="#7FFFD4" class="input" style="height: 25%">
 						<div class="firoper"></div>
 						<div class="secoper" style="background-color:cyan" align="right"></div>
 						<div class="thioper"></div>
+					</td>
+					<td rowspan="1" bgcolor="#7FFF00" class="memory">
+						<li id="mem1"></li>
+						<li id="mem2"></li>
+						<li id="mem3"></li>
+						<li id="mem4"></li>
+						<li id="mem5"></li>
 					</td>
 				</tr>
 				<tr>
