add space for memory calc

--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 			<caption><center>CALCULADORA MAGICA</center></caption>
 			<tbody>
 				<tr>
-					<td colspan="4" rowspan="1" bgcolor="#7FFFD4" class="input" style="height: 25%">
+					<td colspan="3" rowspan="1" bgcolor="#7FFFD4" class="input" style="height: 25%">
 						<div class="firoper"></div>
 						<div class="secoper" style="background-color:cyan" align="right"></div>
 						<div class="thioper"></div>
 					</td>
-					<td rowspan="1" bgcolor="#7FFF00" class="memory">
+					<td bgcolor="#7FFF00" class="memory">
 						<li id="mem1"></li>
 						<li id="mem2"></li>
 						<li id="mem3"></li>
