--- a/index.html
+++ b/index.html
@@ -27,39 +27,39 @@
 						<div class="result"></div>
 					</td>
 				</tr>
-				<tr class="key">
+				<tr>
 					<td class="op" id="root" width="200"><center>sQ root</center></td>
 					<td class="op" id="potency" width="200"><center>poWer of</center></td>
 					<td class="op" id="square" width="200"><center>^2 (E)</center></td>
 					<td class="op" id="rootx" width="200"><center>Root</center></td>
 				</tr> 
-				<tr class="key">
+				<tr>
 					<td class="op" id="ans"><center>Ans</center></td>
 					<td></td>
 					<td></td>
 					<td></td>
 				</tr>
-				<tr class="key">
+				<tr>
 					<td id="clear" bgcolor="red"><center><b>Clear</b></center></td>
 					<td class="op" id="/"><center>/</center></td>
 					<td class="op" id="*"><center>*</center></td>
 					<td class="op" id="-"><center>-</center></td>
 				</tr>
-				<tr class="key">
-					<td id="7"><center>7</center></td>
-					<td id="8"><center>8</center></td>
-						<td id="9"><center>9</center></td>
+				<tr>
+					<td id="7" class="key"><center>7</center></td>
+					<td id="8" class="key"><center>8</center></td>
+					<td id="9" class="key"><center>9</center></td>
 					<td class="op" id="+" rowspan="2"><center>+</center></td>			
 				</tr>
-				<tr class="key">
-					<td id="4"><center>4</center></td>
-					<td id="5"><center>5</center></td>
-					<td id="6"><center>6</center></td>
+				<tr>
+					<td id="4" class="key"><center>4</center></td>
+					<td id="5" class="key"><center>5</center></td>
+					<td id="6" class="key"><center>6</center></td>
 				</tr>
-				<tr class="key">
-					<td id="1"><center>1</center></td>
-					<td id="2"><center>2</center></td>
-					<td id="3"><center>3</center></td>
+				<tr>
+					<td id="1" class="key"><center>1</center></td>
+					<td id="2" class="key"><center>2</center></td>
+					<td id="3" class="key"><center>3</center></td>
 					<td class="op" id="=" bgcolor="green" rowspan="2"><center>=</center></td>			
 				</tr>
 				<tr class="key">
