small fix to operator

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 				<tr>
 					<td colspan="3" rowspan="1" bgcolor="#7FFFD4" class="input" style="height: 25%">
 						<div class="firoper"></div>
-						<div class="secoper" style="background-color:cyan" align="right"></div>
+						<div class="secoper" style="background-color:cyan" align="center"></div>
 						<div class="thioper"></div>
 					</td>
 					<td bgcolor="#7FFF00" class="memory">
