--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 			<caption><center>CALCULADORA MAGICA</center></caption>
 			<tbody>
 				<tr>
-					<td colspan="2" rowspan="1" bgcolor="#7FFF00" class="input">
+					<td colspan="2" rowspan="1" class="input">
 						<div class="firoper"></div>
 						<div class="secoper" align="center"></div>
 						<div class="thioper"></div>
@@ -43,15 +43,15 @@
 				</tr> 
 				<tr>
 
-					<td class="op" id="+" bgcolor="#FF5733"><center>+</center></td>
-					<td class="op" id="-" bgcolor="#FF5733"><center>-</center></td>
+					<td class="op" id="+"><center>+</center></td>
+					<td class="op" id="-"><center>-</center></td>
 					<td></td>
 				</tr>
 				<tr>
 
-					<td class="op" id="/" bgcolor="#FF5733"><center>/</center></td>
-					<td class="op" id="*" bgcolor="#FF5733"><center>*</center></td>
-					<td id="clear" bgcolor="red"><center><b>Clear</b></center></td>
+					<td class="op" id="/"><center>/</center></td>
+					<td class="op" id="*"><center>*</center></td>
+					<td class="op" id="ans"><center>Ans</center></td>					
 				</tr>
 				<tr>
 					<td id="7" class="key" height="50"><center>7</center></td>
@@ -71,8 +71,8 @@
 				</tr>
 				<tr class="key">
 					<td id="0" height="50"><center>0</center></td>
-					<td class="op" id="ans"><center>Ans</center></td>
-					<td class="op" id="=" bgcolor="green"><center>=</center></td>
+					<td id="clear" bgcolor="red"><center><b>Clear</b></center></td>
+					<td class="op" id="equals" bgcolor="green"><center>=</center></td>
 				</tr>
 			</tbody>
 		</table>
