--- a/index.html
+++ b/index.html
@@ -26,9 +26,7 @@
 					</td>
 				</tr>
 				<tr>
-					<td align="right" colspan="5" bgcolor="white"  height="80">
-						<div class="result"></div>
-					</td>
+					<td colspan="5" class="result"></td>
 				</tr>
 				<tr>
 					<td class="op" id="rootx" width="333"><center>Root</center></td>
@@ -54,24 +52,24 @@
 					<td class="op" id="ans"><center>Ans</center></td>					
 				</tr>
 				<tr>
-					<td id="7" class="key" height="50"><center>7</center></td>
+					<td id="7" class="key"><center>7</center></td>
 					<td id="8" class="key"><center>8</center></td>
 					<td id="9" class="key"><center>9</center></td>		
 				</tr>
 				<tr>
-					<td id="4" class="key" height="50"><center>4</center></td>
+					<td id="4" class="key"><center>4</center></td>
 					<td id="5" class="key"><center>5</center></td>
 					<td id="6" class="key"><center>6</center></td>
 				</tr>
 				<tr>
-					<td id="1" class="key" height="50"><center>1</center></td>
+					<td id="1" class="key"><center>1</center></td>
 					<td id="2" class="key"><center>2</center></td>
 					<td id="3" class="key"><center>3</center></td>
 		
 				</tr>
-				<tr class="key">
-					<td id="0" height="50"><center>0</center></td>
-					<td id="clear" bgcolor="red"><center><b>Clear</b></center></td>
+				<tr>
+					<td id="0" class="key"><center>0</center></td>
+					<td class="op" id="clear"><center><b>Clear</b></center></td>
 					<td class="op" id="equals" bgcolor="green"><center>=</center></td>
 				</tr>
 			</tbody>
