set for styles with external references

--- a/index.html
+++ b/index.html
@@ -2,14 +2,15 @@
 	<title>CALCULADORA</title>
 	<head>
 		<link rel="stylesheet" type="text/css" href="./estilo.css">
+		<link href="https://fonts.googleapis.com/css?family=Permanent+Marker|Special+Elite|VT323" rel="stylesheet">
 	</head>
 	<body bgcolor="white">
 		<script src="./javascripts/experimento.js" type="text/javascript" charset="utf-8" async defer></script>
 		<center>
-			<h1>LA  no tan ARITMETICA CALCULADORA MAGICA</h1>
-			<h5><center>que arreglo el 3d0</center></h5>
+			<h1 class="title">LA  no tan ARITMETICA CALCULADORA MAGICA</h1>
+			<div class="subtitle"><center>que arreglo el 3d0</center></div>
 		<table bgcolor="gray" id="calc" width="800" border="5">
-			<caption><center>CALCULADORA MAGICA</center></caption>
+			<caption class="title"><center>CALCULADORA MAGICA</center></caption>
 			<tbody>
 				<tr>
 					<td colspan="2" rowspan="1" class="input">
@@ -29,13 +30,13 @@
 					<td colspan="5" class="result"></td>
 				</tr>
 				<tr>
-					<td class="op" id="rootx" width="333"><center>Root</center></td>
-					<td class="op" id="root" width="333"><center>sQ root</center></td>
+					<td class="op" id="rootx" width="333"><center>Nthoot (R)</center></td>
+					<td class="op" id="root" width="333"><center>√ (S)</center></td>
 					<td width="333"></td>
 				</tr>
 				<tr>
 
-					<td class="op" id="potency"><center>poWer of</center></td>
+					<td class="op" id="potency"><center>^ (W)</center></td>
 					<td class="op" id="square"><center>^2 (E)</center></td>
 					<td></td>
 				</tr> 
