esilo reactivo; funcion logaritmica

--- a/index.html
+++ b/index.html
@@ -31,20 +31,20 @@
 				</tr>
 				<tr>
 					<td class="op" id="rootx" width="333"><center>Nthoot (R)</center></td>
-					<td class="op" id="root" width="333"><center>√ (S)</center></td>
+					<td class="op" id="root" width="333"><center>√ (Q)</center></td>
 					<td width="333"></td>
 				</tr>
 				<tr>
 
 					<td class="op" id="potency"><center>^ (W)</center></td>
 					<td class="op" id="square"><center>^2 (E)</center></td>
-					<td></td>
+					<td class="op" id="logX"><center>log <small>y</small> X</center></td>
 				</tr> 
 				<tr>
 
 					<td class="op" id="+"><center>+</center></td>
 					<td class="op" id="-"><center>-</center></td>
-					<td></td>
+					<td class="op" id="log10"><center>log <small>10</small> (D)</center></td>
 				</tr>
 				<tr>
 
@@ -70,8 +70,8 @@
 				</tr>
 				<tr>
 					<td id="0" class="key"><center>0</center></td>
-					<td class="op" id="clear"><center><b>Clear</b></center></td>
-					<td class="op" id="equals" bgcolor="green"><center>=</center></td>
+					<td class="op" id="clear"><center>Clear</center></td>
+					<td class="op" id="equals"><center>=</center></td>
 				</tr>
 			</tbody>
 		</table>
