fix for [issue 1]; memory click still unusuable; fix for style, now it <<floats>>

--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
 						<div class="secoper" align="center"></div>
 						<div class="thioper"></div>
 					</td>
-					<td bgcolor="#7FFF00" class="memory">
-						<li id="mem1" ></li>
-						<li id="mem2" ></li>
-						<li id="mem3" ></li>
-						<li id="mem4" ></li>
-						<li id="mem5" ></li>
+					<td bgcolor="#7FFF00">
+						<li class="memory" id="mem1" ></li>
+						<li class="memory" id="mem2" ></li>
+						<li class="memory" id="mem3" ></li>
+						<li class="memory" id="mem4" ></li>
+						<li class="memory" id="mem5" ></li>
 					</td>
 				</tr>
 				<tr>
@@ -35,19 +35,16 @@
 					<td width="333"></td>
 				</tr>
 				<tr>
-
 					<td class="op" id="potency"><center>^ (W)</center></td>
 					<td class="op" id="square"><center>^2 (E)</center></td>
-					<td class="op" id="logX"><center>log <small>y</small> X</center></td>
+					<td class="op" id="logX"><center>log <small>y</small> X (S)</center></td>
 				</tr> 
 				<tr>
-
 					<td class="op" id="+"><center>+</center></td>
 					<td class="op" id="-"><center>-</center></td>
-					<td class="op" id="log10"><center>log <small>10</small> (D)</center></td>
+					<td class="op" id="log10"><center>log <small>10</small> X (D)</center></td>
 				</tr>
 				<tr>
-
 					<td class="op" id="/"><center>/</center></td>
 					<td class="op" id="*"><center>*</center></td>
 					<td class="op" id="ans"><center>Ans</center></td>					
