memory is now working as intended

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 						<div class="secoper" align="center"></div>
 						<div class="thioper"></div>
 					</td>
-					<td bgcolor="#7FFF00">
+					<td class="memory">
 						<li class="memory" id="mem1" ></li>
 						<li class="memory" id="mem2" ></li>
 						<li class="memory" id="mem3" ></li>
@@ -30,9 +30,9 @@
 					<td colspan="5" class="result"></td>
 				</tr>
 				<tr>
-					<td class="op" id="rootx" width="333"><center>Nthoot (R)</center></td>
-					<td class="op" id="root" width="333"><center>√ (Q)</center></td>
-					<td width="333"></td>
+					<td class="op" id="rootx" width="200"><center>Nthoot (R)</center></td>
+					<td class="op" id="root" width="200"><center>√ (Q)</center></td>
+					<td width="200"></td>
 				</tr>
 				<tr>
 					<td class="op" id="potency"><center>^ (W)</center></td>
