--- a/index.html
+++ b/index.html
@@ -32,22 +32,23 @@
 				<tr>
 					<td class="op" id="rootx" width="200"><center>Nthoot (R)</center></td>
 					<td class="op" id="root" width="200"><center>√ (Q)</center></td>
-					<td width="200"></td>
+					<td width="200" class="op" id="logX"><center>log <small>y</small> X (S)</center></td>
+
 				</tr>
 				<tr>
 					<td class="op" id="potency"><center>^ (W)</center></td>
 					<td class="op" id="square"><center>^2 (E)</center></td>
-					<td class="op" id="logX"><center>log <small>y</small> X (S)</center></td>
+					<td class="op" id="log10"><center>log <small>10</small> X (D)</center></td>
 				</tr> 
 				<tr>
 					<td class="op" id="+"><center>+</center></td>
 					<td class="op" id="-"><center>-</center></td>
-					<td class="op" id="log10"><center>log <small>10</small> X (D)</center></td>
+					<td class="op" id="minus"><center>(-) (F)</center></td>
 				</tr>
 				<tr>
 					<td class="op" id="/"><center>/</center></td>
 					<td class="op" id="*"><center>*</center></td>
-					<td class="op" id="ans"><center>Ans</center></td>					
+					<td class="op" id="ans"><center>Ans (A)</center></td>					
 				</tr>
 				<tr>
 					<td id="7" class="key"><center>7</center></td>
