--- a/index.html
+++ b/index.html
@@ -1,66 +1,78 @@
 <html>
 	<title>CALCULADORA</title>
-	<head></head>
+	<head>
+		<link rel="stylesheet" type="text/css" href="./estilo.css">
+		<link href="https://fonts.googleapis.com/css?family=Permanent+Marker|Special+Elite|VT323" rel="stylesheet">
+	</head>
 	<body bgcolor="white">
+		<script src="./javascripts/experimento.js" type="text/javascript" charset="utf-8" async defer></script>
 		<center>
-			<h1>LA  no tan ARITMETICA CALCULADORA MAGICA</h1>
-		<table bgcolor="gray" id="calc" width="800" style="height: 50%" border="5">
-			<caption><center>CALCULADORA MAGICA</center></caption>
+			<h1 class="title">LA  no tan ARITMETICA CALCULADORA MAGICA</h1>
+			<div class="subtitle"><center>que arreglo el 3d0</center></div>
+		<table bgcolor="gray" id="calc" width="800" border="5">
+			<caption class="title"><center>CALCULADORA MAGICA</center></caption>
 			<tbody>
-				<tr class="key">
-					<td colspan="5" rowspan="1" bgcolor="white" class="input" style="height: 25%">
+				<tr>
+					<td colspan="2" rowspan="1" class="input">
 						<div class="firoper"></div>
-						<div class="secoper" style="background-color:cyan" align="right"></div>
+						<div class="secoper" align="center"></div>
 						<div class="thioper"></div>
+					</td>
+					<td class="memory">
+						<li class="memory" id="mem1" ></li>
+						<li class="memory" id="mem2" ></li>
+						<li class="memory" id="mem3" ></li>
+						<li class="memory" id="mem4" ></li>
+						<li class="memory" id="mem5" ></li>
 					</td>
 				</tr>
 				<tr>
-					<td align="right" colspan="5" bgcolor="white" style="height: 10%">
-						<div class="result"></div>
-					</td>
+					<td colspan="5" class="result"></td>
 				</tr>
-				<tr class="key">
-					<td class="op" id="root" width="200"><center>sQ root</center></td>
-					<td class="op" id="potency" width="200"><center>poWer of</center></td>
-					<td class="op" id="square" width="200"><center>^2 (E)</center></td>
-					<td class="op" id="rootx" width="200"><center>Root</center></td>
+				<tr>
+					<td class="op" id="rootx" width="200"><center>Nthoot (R)</center></td>
+					<td class="op" id="root" width="200"><center>√ (Q)</center></td>
+					<td width="200" class="op" id="logX"><center>log <small>y</small> X (S)</center></td>
+
+				</tr>
+				<tr>
+					<td class="op" id="potency"><center>^ (W)</center></td>
+					<td class="op" id="square"><center>^2 (E)</center></td>
+					<td class="op" id="log10"><center>log <small>10</small> X (D)</center></td>
 				</tr> 
-				<tr class="key">
-					<td class="op" id="ans"><center>Ans</center></td>
-					<td></td>
-					<td></td>
-					<td></td>
+				<tr>
+					<td class="op" id="+"><center>+</center></td>
+					<td class="op" id="-"><center>-</center></td>
+					<td class="op" id="minus"><center>(-) (F)</center></td>
 				</tr>
-				<tr class="key">
-					<td id="clear" bgcolor="red"><center><b>Clear</b></center></td>
+				<tr>
 					<td class="op" id="/"><center>/</center></td>
 					<td class="op" id="*"><center>*</center></td>
-					<td class="op" id="-"><center>-</center></td>
+					<td class="op" id="ans"><center>Ans (A)</center></td>					
 				</tr>
-				<tr class="key">
-					<td id="7"><center>7</center></td>
-					<td id="8"><center>8</center></td>
-						<td id="9"><center>9</center></td>
-					<td class="op" id="+" rowspan="2"><center>+</center></td>			
+				<tr>
+					<td id="7" class="key"><center>7</center></td>
+					<td id="8" class="key"><center>8</center></td>
+					<td id="9" class="key"><center>9</center></td>		
 				</tr>
-				<tr class="key">
-					<td id="4"><center>4</center></td>
-					<td id="5"><center>5</center></td>
-					<td id="6"><center>6</center></td>
+				<tr>
+					<td id="4" class="key"><center>4</center></td>
+					<td id="5" class="key"><center>5</center></td>
+					<td id="6" class="key"><center>6</center></td>
 				</tr>
-				<tr class="key">
-					<td id="1"><center>1</center></td>
-					<td id="2"><center>2</center></td>
-					<td id="3"><center>3</center></td>
-					<td class="op" id="=" bgcolor="green" rowspan="2"><center>=</center></td>			
+				<tr>
+					<td id="1" class="key"><center>1</center></td>
+					<td id="2" class="key"><center>2</center></td>
+					<td id="3" class="key"><center>3</center></td>
+		
 				</tr>
-				<tr class="key">
-					<td id="0" colspan="2"><center>0</center></td>
-					<td id="."><center>.</center></td>
+				<tr>
+					<td id="0" class="key"><center>0</center></td>
+					<td class="op" id="clear"><center>Clear</center></td>
+					<td class="op" id="equals"><center>=</center></td>
 				</tr>
 			</tbody>
 		</table>
 	</center>
-	<script src="./javascripts/experimento.js" type="text/javascript" charset="utf-8" async defer></script>
 	</body>
 </html>
