--- a/index.html
+++ b/index.html
@@ -31,32 +31,32 @@
 				</tr>
 				<tr>
 					<td width="200" ><center>Dec <=> BIN</center></td>
-					<td width="200" ><center>!</center></td>
-					<td width="200" ><center>log<small>n</small></center></td>
-					<td width="200" class="op" id="logX"><center>log<small>y</small>X (S)</center></td>
-					<td width="200" class="op" id="log10"><center>log<small>10</small>X (D)</center></td>
+					<td width="200" class="op" id="factorial"><center>! (W)</center></td>
+					<td width="200" class="op" id="natlog"><center>log<small>n</small> (E)</center></td>
+					<td width="200" class="op" id="logX"><center>log<small>y</small>X (R)</center></td>
+					<td width="200" class="op" id="log10"><center>log<small>10</small>X (T)</center></td>
 
 				</tr>
 				<tr>
-					<td class="op" id="potency"><center>x<sup>y</sup> (W)</center></td>
-					<td class="op" id="square"><center>x<sup>2</sup> (E)</center></td>
-					<td><center>x<sup>-1</sup></center></td>
-					<td class="op" id="rootx"><center><sup>y</sup>√<small>x</small> (R)</center></td>
-					<td class="op" id="root"><center>√<small>x</small> (Q)</center></td>
+					<td class="op" id="potency"><center>x<sup>y</sup> (A)</center></td>
+					<td class="op" id="square"><center>x<sup>2</sup> (S)</center></td>
+					<td class="op" id="invMul"><center>x<sup>-1</sup> (D)</center></td>
+					<td class="op" id="rootx"><center><sup>y</sup>√<small>x</small> (F)</center></td>
+					<td class="op" id="root"><center>√<small>x</small> (G)</center></td>
 				</tr> 
 				<tr>
-					<td class="op" id="minus"><center>(-) (F)</center></td>
-					<td><center>Absolute</center></td>
-					<td><center>sin</center></td>
-					<td><center>cos</center></td>
-					<td><center>tan</center></td>
+					<td class="op" id="minus"><center>(-) (Z)</center></td>
+					<td class="op" id="absolute"><center>Absolute (X)</center></td>
+					<td class="op" id="sin"><center>sin (C)</center></td>
+					<td class="op" id="cos"><center>cos (V)</center></td>
+					<td class="op" id="tan"><center>tan (B)</center></td>
 				</tr>
 				<tr>
 					<td id="7" class="key"><center>7</center></td>
 					<td id="8" class="key"><center>8</center></td>
 					<td id="9" class="key"><center>9</center></td>
-					<td id="del" class="op"><center>DEL</center></td>
-					<td id="clear" class="op"><center>Clear</center></td>
+					<td id="del"><center>DEL (|)</center></td>
+					<td id="clear" class="op"><center>Clear (<)</center></td>
 		
 				</tr>
 				<tr>
@@ -78,9 +78,9 @@
 				<tr>
 					<td id="0" class="key"><center>0</center></td>
 					<td id="." class="key"><center>.</center></td>
-					<td id="notation" class="op"><center>x10^<sup>x</sup></center></td>
-					<td class="op" id="ans"><center>Ans (A)</center></td>					
-					<td class="op" id="equals"><center>=</center></td>
+					<td id="notation" class="op"><center>x10^<sup>y</sup> (,)</center></td>
+					<td class="op" id="ans"><center>Ans (Space)</center></td>					
+					<td class="op" id="equals"><center>= (Send)</center></td>
 				</tr>
 			</tbody>
 		</table>
