we use a library for math now

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<title>KaiiCuladora 1.5</title>
 	<link href="./estilo.css" rel="stylesheet" type="text/css">
 	<link href="https://fonts.googleapis.com/css?family=Permanent+Marker|Special+Elite|VT323" rel="stylesheet">
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/5.2.3/math.js"></script>
 </head>
 <body bgcolor="white">
 	<script async charset="utf-8" defer src="./javascripts/experimento.js" type="text/javascript">
